src/parser/serenity_parser/snapshots/serenity__parser__serenity_parser__test__parser@5;.snap
---
source: src/parser/serenity_parser/test.rs
expression: ast
---
[line    1] Expression: 
[line    1] ╰─── Literal: 5
