src/parser/serenity_parser/snapshots/serenity__parser__serenity_parser__test__parser@arr[6];.snap
---
source: src/parser/serenity_parser/test.rs
expression: ast
---
[line    1] Expression: 
[line    1] ╰─── Index:
[line    1]      ├─── Variable: arr
[line    1]      ╰─── Literal: 6
