src/parser/serenity_parser/snapshots/serenity__parser__serenity_parser__test__parser@call(arg1, arg2);.snap
---
source: src/parser/serenity_parser/test.rs
expression: ast
---
[line    1] Expression: 
[line    1] ╰─── Call:
[line    1]      ├─── Variable: call
[line    1]      ├─── Variable: arg1
[line    1]      ╰─── Variable: arg2
