src/parser/serenity_parser/snapshots/serenity__parser__serenity_parser__test__parser@for (var i = 0; i < 10; i = i + 1) { break; }.snap
---
source: src/parser/serenity_parser/test.rs
expression: ast
---
[line    1] For: 
[line    1] ├─── Var Declaration: i
[line    1] │    ╰───  Initializer
[line    1] │         ╰─── Literal: 0
[line    1] ├─── Binary: Less
[line    1] │    ├─── Variable: <Identifier   "i"           [1]>
[line    1] │    ╰─── Literal: 10
[line    1] ├─── Assign:
[line    1] │    ├─── Variable: <Identifier   "i"           [1]>
[line    1] │    ╰─── Binary: Plus
[line    1] │         ├─── Variable: <Identifier   "i"           [1]>
[line    1] │         ╰─── Literal: 1
[line    1] ╰─── Block: 
[line    1]      ╰─── Break
